--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -15,6 +15,9 @@
     },
     "home": {
         "title": "กระเป๋าเงินดิจิทัล",
+        "greeting": "สวัสดี, {{name}}",
+        "guest": "ผู้เยี่ยมชม",
+        "select_card_instruction": "เลือกบัตรเพื่อใช้งาน",
         "total_balance": "ยอดเงินรวม",
         "top_up": "เติมเงิน",
         "buy_card": "ซื้อบัตร",
@@ -85,6 +88,7 @@
     "buy_card": {
         "title": "ซื้อบัตรเสมือน",
         "card_group": "กลุ่มบัตร",
+        "card_preview": "ตัวอย่างบัตร",
         "select_group": "เลือกกลุ่มบัตร",
         "rounds": "เที่ยว",
         "select_rounds": "เลือกจำนวนเที่ยว",
@@ -150,6 +154,12 @@
         "date_time": "วันและเวลา",
         "transaction_id": "เลขที่ธุรกรรม",
         "type": "ประเภท"
+    },
+    "yourcard": {
+        "title": "บัตรของคุณ",
+        "scan_to_use": "สแกนเพื่อใช้งานบัตร",
+        "lock_card": "ล็อคบัตร",
+        "lock_subtitle": "คุณสามารถล็อคและปลดล็อคได้ตลอดเวลา"
     },
     "menu": {
         "home": "หน้าหลัก",
