feat: Implement user registration page with gender and birth year selection, including styling and localization.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,7 +54,7 @@
         "female": "Female",
         "other": "Unknown",
         "birth_year": "Birth Year (B.E.)",
-        "birth_year_placeholder": "e.g. 2540",
+        "birth_year_placeholder": "Select Birth Year",
         "submit": "Complete Registration",
         "registering": "Registering...",
         "error_birth_year": "Please enter your birth year",
