--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -117,6 +117,7 @@
         "active": "Active",
         "new": "New",
         "expired": "Expired",
+        "locked": "Locked",
         "validity": "Validity",
         "starts_on_first_use": "Starts on first use ({{hours}} hours)",
         "expires_on": "Expires On",
@@ -124,6 +125,7 @@
         "recent_usage": "Recent Usage",
         "scanning": "Scanning...",
         "simulate_scan": "Simulate Scan",
+        "lock_card": "Lock Card",
         "rounds_plural": "Rounds",
         "rounds_singular": "Round",
         "credit": "Credit",
