--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -107,6 +107,7 @@
         "active": "ใช้งานได้",
         "new": "ใหม่",
         "expired": "หมดอายุ",
+        "locked": "ล็อค",
         "validity": "อายุการใช้งาน",
         "starts_on_first_use": "เริ่มนับเมื่อใช้งานครั้งแรก ({{hours}} ชั่วโมง)",
         "expires_on": "หมดอายุวันที่",
@@ -114,6 +115,7 @@
         "recent_usage": "ใช้งานล่าสุด",
         "scanning": "กำลังสแกน...",
         "simulate_scan": "จำลองการสแกน",
+        "lock_card": "ล็อคบัตร",
         "rounds_plural": "เที่ยว",
         "rounds_singular": "เที่ยว",
         "credit": "เครดิต",
