feat: Introduce 'Your Cards' page with dedicated UI, styles, and localization for card management.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -172,6 +172,7 @@
         "home": "Home",
         "buy_card": "Buy Card",
         "history": "History",
+        "yourcard": "My Card",
         "scan": "Scan",
         "profile": "Profile"
     }
