--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -156,6 +156,7 @@
         "home": "หน้าหลัก",
         "buy_card": "ซื้อบัตร",
         "history": "ประวัติ",
+        "yourcard": "บัตรของฉัน",
         "scan": "สแกน",
         "profile": "โปรไฟล์"
     }
