--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,8 @@
         "hours_singular": "Hour",
         "authentic-card-adult": "ADULT",
         "authentic-card-student": "STUDENT",
-        "scan": "Scan"
+        "scan": "Scan",
+        "tap_to_see_qr": "Tap card to see QR Code"
     },
     "register": {
         "welcome": "Welcome",
@@ -68,7 +69,9 @@
         "edit_profile": "Edit Profile",
         "save_changes": "Save Changes",
         "scan_qr": "Scan QR Code",
-        "scan_description": "Scan to add a new card to your wallet"
+        "scan_description": "Scan to add a new card to your wallet",
+        "error_card_owned_title": "Card Unavailable",
+        "error_card_owned_message": "This card already has an owner."
     },
     "topup": {
         "title": "Top Up Wallet",
@@ -99,6 +102,7 @@
         "select_rounds": "Select Rounds",
         "quantity": "Quantity",
         "valid_until": "Valid until {{date}}",
+        "valid_until_label": "Valid Until",
         "order_summary": "Order Summary",
         "card_type": "Card Type",
         "details": "Details",
@@ -132,7 +136,9 @@
         "left": "left",
         "bus_ride": "Bus Ride",
         "scan_failed": "Scan Failed",
-        "scan_error": "Scan Error"
+        "scan_error": "Scan Error",
+        "your_qr_code": "Your QR Code",
+        "flip_back": "Flip Back"
     },
     "success_modal": {
         "title": "Top Up Successful!",
