--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -118,6 +118,19 @@
         "time_remaining": "เวลาที่เหลือ",
         "recent_usage": "ใช้งานล่าสุด",
         "scanning": "กำลังสแกน...",
+        "lock_confirm_title": "ยืนยันการล็อคบัตร",
+        "lock_confirm_message": "คุณแน่ใจหรือไม่ที่จะล็อคบัตรใบนี้? เมื่อล็อคบัตรแล้ว คุณจะไม่สามารถดู QR Code และข้อมูลบัตรได้จนกว่าจะปลดล็อค",
+        "unlock_confirm_title": "ยืนยันการปลดล็อคบัตร",
+        "unlock_confirm_message": "คุณต้องการปลดล็อคบัตรใบนี้หรือไม่?",
+        "card_is_locked": "บัตรนี้ถูกล็อค",
+        "card_locked_description": "กรุณาปลดล็อคเพื่อดูข้อมูลและใช้งานบัตร",
+        "unlock_button": "ปลดล็อคบัตร",
+        "set_main_card": "ตั้งเป็นบัตรหลัก",
+        "main_card": "บัตรหลัก",
+        "main_card_confirm_title": "ตั้งเป็นบัตรหลัก?",
+        "main_card_confirm_message": "คุณต้องการตั้งบัตรนี้เป็นบัตรหลักหรือไม่?",
+        "main_card_replace_title": "เปลี่ยนบัตรหลัก?",
+        "main_card_replace_message": "คุณมีบัตรหลักอยู่แล้ว ต้องการเปลี่ยนเป็นบัตรนี้หรือไม่?",
         "simulate_scan": "จำลองการสแกน",
         "lock_card": "ล็อคบัตร",
         "rounds_plural": "เที่ยว",
