feat: add English and Thai localization files

--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -7,6 +7,7 @@
         "close": "ปิด",
         "confirm": "ยืนยัน",
         "success": "สำเร็จ",
+        "verify": "ยืนยัน",
         "purchase": "ซื้อสินค้า",
         "topup": "เติมเงิน",
         "minutes": "นาที",
