--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
         "close": "Close",
         "confirm": "Confirm",
         "success": "Success",
+        "verify": "Verify",
         "purchase": "Purchase",
         "topup": "Top Up",
         "minutes": "minutes",
